rustreapi/rustreapi/tests/snapshots/hsm_test__test3_register_bad_parms-2.snap
---
source: rustreapi/tests/hsm_test.rs
expression: result
---
Err(
    NotLustreFileSystem(
        "/tmp",
    ),
)
