rustreapi/rustreapi/tests/snapshots/hsm_test__test3_register_bad_parms.snap
---
source: rustreapi/tests/hsm_test.rs
expression: result
snapshot_kind: text
---
Err(
    MsgErrno(
        "Failed to register copytool",
        EINVAL,
    ),
)
