rustreapi/rustreapi/tests/snapshots/hsm_test__test51_hsm_state_set.snap
---
source: rustreapi/tests/hsm_test.rs
expression: result
---
Ok(
    HsmCurrent {
        states: HsmState(
            Exists | Archived,
        ),
        archive_id: 64,
        progress_state: Waiting,
        action: Noop,
        extent: Extent {
            offset: 0,
            length: 0,
        },
    },
)
